# spidermind

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVPLAN.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
devlog/: M1-models.md  M2-config.md  M3-plugins.md
docs/: index.md  installation.md
examples/: README.md
spidermind/: __init__.py
spidermind/core/: __init__.py  config.py  models.py
spidermind/plugins/: __init__.py
tests/: __init__.py  test_example.py  test_m1_models.py  test_m2_config.py  test_m3_plugins.py
