[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spidermind"
version = "0.1.0"
description = "AI-powered modular web crawler framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.25,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=4.9,<6.0",
    "click>=8.0,<9.0",
    "rich>=13.0,<14.0",
    "pyyaml>=6.0,<7.0",
    "tenacity>=8.0,<9.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0,<2.0", "anthropic>=0.18,<1.0"]
all = ["spidermind[ai]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0", "ruff>=0.1"]

[project.urls]
Repository = "https://github.com/caozuohua/spidermind"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
